# vkkk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gui.cpp  gui.h  main.cpp  notes.md  vkabstraction.cpp  vkabstraction.h
cmake/: FindGLFW.cmake  FindGLM.cmake  FindOIIO.cmake  FindSHADERC.cmake  FindSPIRVCROSS.cmake  FindShaderc.cmake
plugin/: CMakeLists.txt
resource/models/: sphere.glb
resource/shaders/: basic_lighting.frag  basic_lighting.vert  depth_default.vert  depth_no_tex.frag  depth_no_tex.vert  matte.frag  matte.vert  skybox.frag  skybox.vert  with_tex.frag  with_tex.vert
src/: CMakeLists.txt  debug_main.cpp  editor.cpp  main.cpp  multi_pipeline_main.cpp  tutor_main.cpp
src/asset_mgr/: light_mgr.cpp  light_mgr.h  mesh.cpp  mesh.h  mesh_mgr.cpp  mesh_mgr.h  scene.cpp  scene.h
src/binding/: CMakeLists.txt  binding.cpp  math.cpp  types.cpp  utils.h
src/concepts/: camera.cpp  camera.h  lights.h  mesh.cpp  mesh.h
src/control/: control_cbk.cpp  control_cbk.h
src/utils/: common.h  io.h  macros.h  singleton.h
src/vk_ins/: cmd_buf.cpp  cmd_buf.h  misc.cpp  misc.h  pipeline_mgr.cpp  pipeline_mgr.h  render_target.cpp  render_target.h  shader_mgr.cpp  shader_mgr.h  types.h  uniform_mgr.cpp  uniform_mgr.h  vkabstraction.cpp  vkabstraction.h  vktexture.cpp  vktexture.h  vkubo.cpp  vkubo.h
tests/: CMakeLists.txt
tests/asset_mgr_tests/: shader_mgr_test.cpp
tests/concept_tests/: vertex_test.cpp
tests/cross_tests/: resource_test.cpp
tests/language_tests/: singleton_test.cpp
tests/texture_tests/: texture_test.cpp
tests/uniform_tests/: mgr_test.cpp  texture_test.cpp
